--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1251,7 +1251,7 @@ footer {
 }
 
 .cookie-popup button {
-    background: #27C191;
+    background: #FD3181;
     color: #fff;
     border: none;
     padding: 8px 15px;
@@ -1261,10 +1261,10 @@ footer {
 }
 
 .cookie-popup .close-btn {
-    background: #eee;
-    color: #333;
+    background: #FCBCC3;
+    color: #fff;
     font-size: 20px;
-    padding: 5px 10px;
+    padding: 7px 11px;
     line-height: 1;
     border-radius: 50%;
 }
