--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,7 @@ img {
     position: relative;
     align-items: center;
     gap: 8px;
+    transition: var(--transition);
 }
 
 .theme__btn:hover {
@@ -758,12 +759,14 @@ header {
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.10), 0px 4px 6px 0px rgba(0, 0, 0, 0.10);
     transition: 0.3s;
 }
+
 .price__card:hover {
-	background: #F9F9F9;
-	box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, 0.10), 0px 20px 25px 0px rgba(0, 0, 0, 0.10);
-	padding-top: 10px;
-	padding: 21px 24px 28px;
+    background: #F9F9F9;
+    box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, 0.10), 0px 20px 25px 0px rgba(0, 0, 0, 0.10);
+    padding-top: 10px;
+    padding: 21px 24px 28px;
 }
+
 .price__card h4 {
     color: var(--text-color1);
     font-size: 20px;
@@ -862,9 +865,11 @@ header {
     box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, 0.10), 0px 20px 25px 0px rgba(0, 0, 0, 0.10);
     padding-top: 10px;
 }
+
 .price__card.premium__card:hover {
-	padding-top: 10px;
+    padding-top: 10px;
 }
+
 .price__flex .single__price:last-child .price__card {
     padding-bottom: 62px;
 }
@@ -1130,10 +1135,11 @@ footer {
 }
 
 .offcanvas-body ul li a:hover {
-	padding-left: 20px;
-	color: var(--primary-color);
-	border-bottom: 1px solid var(--primary-color);
+    padding-left: 20px;
+    color: var(--primary-color);
+    border-bottom: 1px solid var(--primary-color);
 }
+
 .offcanvas-body ul {
     margin-bottom: 40px;
 }
@@ -1150,32 +1156,34 @@ footer {
 
 
 .pricing-tab {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.4s ease, transform 0.4s ease;
-  pointer-events: none;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.4s ease, transform 0.4s ease;
+    pointer-events: none;
 }
 
 .pricing-tab.active-tab {
-  opacity: 1;
-  transform: translateY(0);
-  position: relative;
-  pointer-events: auto;
-  z-index: 2;
+    opacity: 1;
+    transform: translateY(0);
+    position: relative;
+    pointer-events: auto;
+    z-index: 2;
 }
+
 .pricing-tab.hidden-tab {
-  display: none !important;
+    display: none !important;
 }
 
 
 
 
 
-.custom-owl-prev, .custom-owl-next {
+.custom-owl-prev,
+.custom-owl-next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -1191,26 +1199,30 @@ footer {
     z-index: 100;
     cursor: pointer;
 }
+
 .custom-owl-prev {
     left: -50px;
 }
+
 .custom-owl-next {
     right: -50px;
 }
+
 .user__carousel {
     position: relative;
 }
+
 .user__area .owl-theme .owl-nav [class*="owl-"] {
-	color: #FD267A ;
-	font-size: 27px ;
-	margin: 0px ;
-	padding: 0 ;
-	display: inline-block;
-	cursor: pointer;
-	border-radius: 3px;
-	background: transparent;
-	box-shadow: none;
-	top: 44%;
+    color: #FD267A;
+    font-size: 27px;
+    margin: 0px;
+    padding: 0;
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 3px;
+    background: transparent;
+    box-shadow: none;
+    top: 44%;
 }
 
 
@@ -1251,7 +1263,7 @@ footer {
 }
 
 .cookie-popup button {
-    background: #FD3181;
+    background: #27C191;
     color: #fff;
     border: none;
     padding: 8px 15px;
@@ -1261,10 +1273,10 @@ footer {
 }
 
 .cookie-popup .close-btn {
-    background: #FCBCC3;
-    color: #fff;
+    background: #eee;
+    color: #333;
     font-size: 20px;
-    padding: 7px 11px;
+    padding: 5px 10px;
     line-height: 1;
     border-radius: 50%;
 }
@@ -1273,3 +1285,342 @@ footer {
     opacity: 0;
     visibility: hidden;
 }
+
+
+
+
+
+/* contact area start here */
+
+.contact__area {
+    background-color: #FFF5F7;
+    margin-block: 90px;
+    position: relative;
+    padding-block: 60px;
+    border-top: 1px solid #CED4DA;
+    border-bottom: 1px solid #CED4DA;
+    border-radius: 10px;
+}
+
+.contact__area::after {
+    position: absolute;
+    content: '';
+    background-color: #F9F9F9;
+    width: 100%;
+    height: 90px;
+    top: -90px;
+    z-index: -1;
+}
+
+.contact__area::before {
+    position: absolute;
+    content: '';
+    background-color: #F9F9F9;
+    width: 100%;
+    height: 90px;
+    bottom: -90px;
+    z-index: -1;
+}
+
+.contact__title {
+    margin-bottom: 55px;
+}
+
+.contact__title h1 {
+    color: var(--primary-color);
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    margin-bottom: 10px;
+    font-family: var(--inter-font);
+}
+
+.contact__title p {
+    color: #5F5F5F;
+    font-family: var(--inter-font);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.contact__tab__list #pills-tab {
+    display: inline-flex;
+    background-color: #fff;
+    padding: 4px;
+    border-radius: 1000px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.10), 0px 4px 6px 0px rgba(0, 0, 0, 0.10);
+    margin-bottom: 40px;
+}
+
+.contact__tab__list button {
+    color: #5F5F5F;
+    font-family: var(--inter-font);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: normal;
+    border-radius: 100px;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    border: none;
+    padding: 6.68px 23.625px 9.32px 24px;
+    background: transparent;
+}
+
+.contact__tab__list button svg path {
+    fill: #5F5F5F;
+}
+
+.contact__tab__list button.active {
+    background: var(--gradiant1);
+    color: var(--white);
+}
+
+.contact__tab__list button.active svg path {
+    fill: var(--white);
+}
+
+
+.contact__form {
+    border-radius: 16px;
+    background: #FAF9FA;
+    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.10), 0px 10px 15px 0px rgba(0, 0, 0, 0.10);
+    padding: 56px 32px 32px 32px;
+    width: 58.4%;
+}
+
+.contact__extra {
+    border-radius: 16px;
+    border: 0px solid #E5E7EB;
+    background: rgba(255, 255, 255, 0.90);
+    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.10), 0px 10px 15px 0px rgba(0, 0, 0, 0.10);
+    padding: 32px;
+    width: 39%;
+}
+
+.contact__form .single__input input,
+.contact__form .single__input textarea {
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid #E5E7EB;
+    background: var(--white);
+    padding: 12px 16px;
+    color: #ADAEBC;
+    font-family: var(--inter-font);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.contact__form form {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
+
+.contact__form .single__input label {
+    color: var(--primary-color);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: normal;
+    font-family: var(--inter-font);
+    margin-bottom: 5px;
+}
+
+.contact__form .single__input textarea {
+    height: 146px;
+    resize: none;
+}
+
+.contact__form button {
+    border-radius: 8px;
+    background: var(--gradiant1);
+    padding: 10.56px 10px 13.44px 10px;
+    border: none;
+    color: var(--white);
+    font-family: var(--inter-font);
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 11px;
+}
+
+.contact__form .single__input input:focus,
+.contact__form .single__input textarea:focus {
+    border-color: var(--primary-color);
+    color: #000;
+}
+
+.contact__extra h2 {
+    color: var(--primary-color);
+    font-family: var(--inter-font);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 26px;
+}
+
+.contact__extra__icon {
+    flex-shrink: 0;
+    width: 40px;
+    height: 40px;
+    background: var(--gradiant1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+}
+
+.single__contact__extra {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    margin-bottom: 24px;
+}
+
+.contact__extra h4 {
+    color: #374151;
+    font-family: var(--inter-font);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+}
+
+.contact__extra__text h5 {
+    color: #374151;
+    font-family: var(--inter-font);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    margin-bottom: 4px;
+}
+
+.contact__extra__text a {
+    color: var(--primary-color);
+    font-family: var(--inter-font);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.contact__extra__text address span {
+    margin-bottom: 4px;
+    display: block;
+}
+
+.contact__extra__text address,
+.contact__extra__text time {
+    color: #5F5F5F;
+    font-family: var(--inter-font);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    margin: 0;
+}
+
+.contact__tab__wrapper {
+    max-width: 1151px;
+    margin: auto;
+}
+
+/* contact area end here */
+
+
+
+/* extra page css start here */
+
+.page__title {
+    margin-top: 72px;
+    background: linear-gradient(90deg, rgba(253, 38, 122, 0.10) 0%, rgba(255, 96, 54, 0.10) 100%);
+    padding-block: 128px 106px;
+    position: relative;
+}
+
+.page__title::after {
+    position: absolute;
+    content: '';
+    background: linear-gradient(90deg, #FD267A 0%, #FF6036 100%);
+    height: 100%;
+    width: 59%;
+    top: 0;
+    right: 0;
+    opacity: 0.1;
+    z-index: -1;
+    border-radius: 0 0 0 30px;
+}
+
+.page__title__text h1 {
+    color: var(--black);
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 40px;
+    margin-bottom: 13px;
+}
+
+.page__title__text p {
+    color: #575656;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 40px;
+}
+
+.article__area {
+    padding-block: 48px 198px;
+    background: #F9F9F9;
+}
+
+.article__content {
+    padding: 40px;
+    border-radius: 25px;
+    background: var(--white);
+    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.10), 0px 2px 4px 0px rgba(0, 0, 0, 0.10);
+}
+.article__text p {
+	color: #403E3E;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 30px;
+}
+.article__title__para {
+	margin-bottom: 25px;
+}
+.single__article {
+	margin-bottom: 25px;
+}
+.single__article__list:last-child {
+	margin: 0;
+}
+.article__text__timeline h4 {
+	color: #403E3E;
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 30px;
+}
+.article__text__timeline {
+	margin-bottom: 25px;
+}
+.single__article__list h5 {
+	color: #403E3E;
+	font-size: 20px;
+	font-weight: 700;
+	line-height: 30px;
+}
+.article__list__content ul li {
+	color: #403E3E;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 30px;
+}
+.article__list__content ul li a {
+	text-decoration: underline;
+	color: #403E3E;
+}
+.single__article__list {
+	margin-bottom: 25px;
+}
+
+/* extra page css end here */
